# evo_stt

./: API.md  CMakeLists.txt  NOTICE  README.md
examples/: static_file_demo.cpp  static_file_demo.py  stream_demo.cpp  stream_demo.py
inc/: stt_api.hpp
inc/internal/: asr.hpp  asr_callback.hpp  asr_config.hpp  asr_engine.hpp  asr_types.hpp
inc/internal/backends/: asr_backend.hpp
inc/internal/backends/sensevoice/: feature_extractor.hpp  model_loader.hpp  onnx_compat.hpp  sensevoice.hpp  sensevoice_backend.hpp  sensevoice_model.hpp  tokenizer.hpp
python/: asr_bindings.cpp  pyproject.toml  setup.py
python/evo_asr/: __init__.py  callback.py  engine.py  stream.py  utils.py
python/examples/: static_file_demo.py  stream_demo.py
src/: asr_adapter.cpp  asr_engine.cpp
src/backends/sensevoice/: asr_model.cpp  audio_processor.cpp  feature_extractor.cpp  model_downloader.cpp  model_loader.cpp  sensevoice_backend.cpp  sensevoice_model.cpp  tokenizer.cpp
